test: add resolvePublicKey test